# plaud-unofficial-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/plaud_cli/: api.py  cli.py  config.py  normalizer.py
src/plaud_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
